--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/bootstrap-5.1.3-dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/bootstrap-5.1.3-dist/css/bootstrap.min.css">
     <link rel="shortcut icon" href="https://img.icons8.com/color-glass/19/000000/math.png" type="image/x-icon">
-    <link rel="stylesheet" href="/css/estilo.css">
-    <script src="/js/script.js" defer></script>
+    <link rel="stylesheet" href="./css/estilo.css">
+    <script src="./js/script.js" defer></script>
     <title>Calculadora</title>
 </head>
 <body>
